--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="fontello-7afcbda8/css/fontello.css">
     <link rel="stylesheet" href="style.css">
     <title>Kavkaz Trekking</title>
 </head>
@@ -121,6 +122,173 @@
     </nav>
   </header>
 
+  <!-- Первая секция -->
+  <section id="one-section" class="d-flex">
+    <div class="container one-container">
+      <div class="row justify-content-center text-center">
+        <div class="col-12">
+          <h1>Kavkaz Trekking</h1>
+          <h3>Походы с Людмилой Горбуновой</h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <!-- Первая карточка -->
+          <div class="card mb-4" style="width: 25rem auto;">
+            <div id="my-carousel" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="img/DSC00250.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/DSC03845.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/DSC03990.jpg" alt="">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#my-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#my-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+            <!-- <img src="img/DSC00250.jpg" class="card-img-top" alt="..."> -->
+            <div class="card-body">
+              <h5 class="card-title">Безенги</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <div class="r-icon mb-3">
+                <i class="icon-calendar-plus-o"></i>7 дней
+                <i class="icon-map-signs"></i>35 км
+                <i class="icon-star"></i>4/5
+                <i class="icon-credit-card-alt"></i>10 000 р
+              </div>
+              <div>
+                <a href="#" class="btn btn-outline-dark btn-sm">Узнать больше</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Вторая карточка -->
+          <div class="card mb-4" style="width: 25rem auto;">
+            <img src="img/DSC03845.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Фишт</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <div class="r-icon mb-3">
+                <i class="icon-calendar-plus-o"></i>7 дней
+                <i class="icon-map-signs"></i>35 км
+                <i class="icon-star"></i>4/5
+                <i class="icon-credit-card-alt"></i>10 000 р
+              </div>
+              <div>
+                <a href="#" class="btn btn-outline-dark btn-sm">Узнать больше</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <!-- Третья карточка -->
+          <div class="card mb-4" style="width: 25rem auto;">
+            <img src="img/DSC06473.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Большой Тхач</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's
+                content.</p>
+              <div class="r-icon mb-3">
+                <i class="icon-calendar-plus-o"></i>7 дней
+                <i class="icon-map-signs"></i>35 км
+                <i class="icon-star"></i>4/5
+                <i class="icon-credit-card-alt"></i>10 000 р
+              </div>
+              <div>
+                <a href="#" class="btn btn-outline-dark btn-sm">Узнать больше</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Четвертая карточка -->
+          <div class="card mb-4" style="width: 25rem auto;">
+            <img src="img/DSC06353.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Приэльбрусье</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's
+                content.</p>
+              <div class="r-icon mb-3">
+                <i class="icon-calendar-plus-o"></i>7 дней
+                <i class="icon-map-signs"></i>35 км
+                <i class="icon-star"></i>4/5
+                <i class="icon-credit-card-alt"></i>10 000 р
+              </div>
+              <div>
+                <a href="#" class="btn btn-outline-dark btn-sm">Узнать больше</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="card mb-4" style="width: 25rem auto;">
+              <img src="img/DSC05121.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Большой Тхач</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <div class="r-icon mb-3">
+                  <i class="icon-calendar-plus-o"></i>7 дней
+                  <i class="icon-map-signs"></i>35 км
+                  <i class="icon-star"></i>4/5
+                  <i class="icon-credit-card-alt"></i>10 000 р
+                </div>
+                <div>
+                  <a href="#" class="btn btn-outline-dark btn-sm">Узнать больше</a>
+                </div>
+              </div>
+            </div>
+    
+    
+            <div class="card mb-4" style="width: 25rem auto;">
+              <img src="img/DSC07812.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Архыз</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <div class="r-icon mb-3">
+                  <i class="icon-calendar-plus-o"></i>7 дней
+                  <i class="icon-map-signs"></i>35 км
+                  <i class="icon-star"></i>4/5
+                  <i class="icon-credit-card-alt"></i>10 000 р
+                </div>
+                <div>
+                  <a href="#" class="btn btn-outline-dark btn-sm">Узнать больше</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-grid gap-2 col-6 mx-auto m-5">
+          <!-- <button class="btn btn-outline-dark" type="button">Смотреть всё расписание</button> -->
+          <a href="raspisanie.html" class="btn btn-outline-dark" role="button" data-bs-toggle="button">Смотреть всё расписание</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+<!-- футер -->
   <footer id="footer">
     <div class="container">
       <div class="row justify-content-center">
