добавила страницы блог, маршруты, обо мне, фотоальбомы

--- a/fontello-de9a3836/demo.html
+++ b/fontello-de9a3836/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?72738428');
-      src: url('./font/fontello.eot?72738428#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?72738428') format('woff'),
-           url('./font/fontello.ttf?72738428') format('truetype'),
-           url('./font/fontello.svg?72738428#fontello') format('svg');
+      src: url('./font/fontello.eot?93603129');
+      src: url('./font/fontello.eot?93603129#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?93603129') format('woff'),
+           url('./font/fontello.ttf?93603129') format('truetype'),
+           url('./font/fontello.svg?93603129#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -332,6 +332,48 @@
         <div class="span3" title="Code: 0xe822">
           <i class="demo-icon icon-credit-card">&#xe822;</i> <span class="i-name">icon-credit-card</span><span class="i-code">0xe822</span>
         </div>
+        <div class="span3" title="Code: 0xe823">
+          <i class="demo-icon icon-instagram">&#xe823;</i> <span class="i-name">icon-instagram</span><span class="i-code">0xe823</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe824">
+          <i class="demo-icon icon-search">&#xe824;</i> <span class="i-name">icon-search</span><span class="i-code">0xe824</span>
+        </div>
+        <div class="span3" title="Code: 0xe825">
+          <i class="demo-icon icon-plus-1">&#xe825;</i> <span class="i-name">icon-plus-1</span><span class="i-code">0xe825</span>
+        </div>
+        <div class="span3" title="Code: 0xe826">
+          <i class="demo-icon icon-minus">&#xe826;</i> <span class="i-name">icon-minus</span><span class="i-code">0xe826</span>
+        </div>
+        <div class="span3" title="Code: 0xe827">
+          <i class="demo-icon icon-folder-open">&#xe827;</i> <span class="i-name">icon-folder-open</span><span class="i-code">0xe827</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe828">
+          <i class="demo-icon icon-cog">&#xe828;</i> <span class="i-name">icon-cog</span><span class="i-code">0xe828</span>
+        </div>
+        <div class="span3" title="Code: 0xe829">
+          <i class="demo-icon icon-volume-up">&#xe829;</i> <span class="i-name">icon-volume-up</span><span class="i-code">0xe829</span>
+        </div>
+        <div class="span3" title="Code: 0xe82a">
+          <i class="demo-icon icon-heart-1">&#xe82a;</i> <span class="i-name">icon-heart-1</span><span class="i-code">0xe82a</span>
+        </div>
+        <div class="span3" title="Code: 0xe82b">
+          <i class="demo-icon icon-star-1">&#xe82b;</i> <span class="i-name">icon-star-1</span><span class="i-code">0xe82b</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe832">
+          <i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span>
+        </div>
+        <div class="span3" title="Code: 0xe838">
+          <i class="demo-icon icon-spin5 animate-spin">&#xe838;</i> <span class="i-name">icon-spin5</span><span class="i-code">0xe838</span>
+        </div>
+        <div class="span3" title="Code: 0xe839">
+          <i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span>
+        </div>
         <div class="span3" title="Code: 0xf0d5">
           <i class="demo-icon icon-gplus">&#xf0d5;</i> <span class="i-name">icon-gplus</span><span class="i-code">0xf0d5</span>
         </div>
@@ -343,42 +385,59 @@
         <div class="span3" title="Code: 0xf0e5">
           <i class="demo-icon icon-comment-empty">&#xf0e5;</i> <span class="i-name">icon-comment-empty</span><span class="i-code">0xf0e5</span>
         </div>
+        <div class="span3" title="Code: 0xf0f2">
+          <i class="demo-icon icon-suitcase">&#xf0f2;</i> <span class="i-name">icon-suitcase</span><span class="i-code">0xf0f2</span>
+        </div>
         <div class="span3" title="Code: 0xf0f5">
           <i class="demo-icon icon-food">&#xf0f5;</i> <span class="i-name">icon-food</span><span class="i-code">0xf0f5</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf112">
           <i class="demo-icon icon-reply">&#xf112;</i> <span class="i-name">icon-reply</span><span class="i-code">0xf112</span>
         </div>
-      </div>
-      <div class="row">
+        <div class="span3" title="Code: 0xf130">
+          <i class="demo-icon icon-mic">&#xf130;</i> <span class="i-name">icon-mic</span><span class="i-code">0xf130</span>
+        </div>
         <div class="span3" title="Code: 0xf137">
           <i class="demo-icon icon-angle-circled-left">&#xf137;</i> <span class="i-name">icon-angle-circled-left</span><span class="i-code">0xf137</span>
         </div>
         <div class="span3" title="Code: 0xf138">
           <i class="demo-icon icon-angle-circled-right">&#xf138;</i> <span class="i-name">icon-angle-circled-right</span><span class="i-code">0xf138</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf139">
           <i class="demo-icon icon-angle-circled-up">&#xf139;</i> <span class="i-name">icon-angle-circled-up</span><span class="i-code">0xf139</span>
         </div>
         <div class="span3" title="Code: 0xf13a">
           <i class="demo-icon icon-angle-circled-down">&#xf13a;</i> <span class="i-name">icon-angle-circled-down</span><span class="i-code">0xf13a</span>
         </div>
-      </div>
-      <div class="row">
+        <div class="span3" title="Code: 0xf142">
+          <i class="demo-icon icon-ellipsis-vert">&#xf142;</i> <span class="i-name">icon-ellipsis-vert</span><span class="i-code">0xf142</span>
+        </div>
         <div class="span3" title="Code: 0xf164">
           <i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf165">
           <i class="demo-icon icon-thumbs-down-alt">&#xf165;</i> <span class="i-name">icon-thumbs-down-alt</span><span class="i-code">0xf165</span>
         </div>
         <div class="span3" title="Code: 0xf16a">
           <i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span>
         </div>
-        <div class="span3" title="Code: 0xf185">
-          <i class="demo-icon icon-sun">&#xf185;</i> <span class="i-name">icon-sun</span><span class="i-code">0xf185</span>
+        <div class="span3" title="Code: 0xf182">
+          <i class="demo-icon icon-female">&#xf182;</i> <span class="i-name">icon-female</span><span class="i-code">0xf182</span>
+        </div>
+        <div class="span3" title="Code: 0xf183">
+          <i class="demo-icon icon-male">&#xf183;</i> <span class="i-name">icon-male</span><span class="i-code">0xf183</span>
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xf185">
+          <i class="demo-icon icon-sun">&#xf185;</i> <span class="i-name">icon-sun</span><span class="i-code">0xf185</span>
+        </div>
         <div class="span3" title="Code: 0xf186">
           <i class="demo-icon icon-moon">&#xf186;</i> <span class="i-name">icon-moon</span><span class="i-code">0xf186</span>
         </div>
@@ -388,28 +447,36 @@
         <div class="span3" title="Code: 0xf1b0">
           <i class="demo-icon icon-paw">&#xf1b0;</i> <span class="i-name">icon-paw</span><span class="i-code">0xf1b0</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf1bb">
           <i class="demo-icon icon-tree">&#xf1bb;</i> <span class="i-name">icon-tree</span><span class="i-code">0xf1bb</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf1d8">
           <i class="demo-icon icon-paper-plane">&#xf1d8;</i> <span class="i-name">icon-paper-plane</span><span class="i-code">0xf1d8</span>
         </div>
         <div class="span3" title="Code: 0xf1e0">
           <i class="demo-icon icon-share">&#xf1e0;</i> <span class="i-name">icon-share</span><span class="i-code">0xf1e0</span>
         </div>
+        <div class="span3" title="Code: 0xf1f8">
+          <i class="demo-icon icon-trash">&#xf1f8;</i> <span class="i-name">icon-trash</span><span class="i-code">0xf1f8</span>
+        </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf1f9">
           <i class="demo-icon icon-copyright">&#xf1f9;</i> <span class="i-name">icon-copyright</span><span class="i-code">0xf1f9</span>
         </div>
         <div class="span3" title="Code: 0xf207">
           <i class="demo-icon icon-bus">&#xf207;</i> <span class="i-name">icon-bus</span><span class="i-code">0xf207</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf232">
           <i class="demo-icon icon-whatsapp">&#xf232;</i> <span class="i-name">icon-whatsapp</span><span class="i-code">0xf232</span>
         </div>
+        <div class="span3" title="Code: 0xf234">
+          <i class="demo-icon icon-user-plus">&#xf234;</i> <span class="i-name">icon-user-plus</span><span class="i-code">0xf234</span>
+        </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf239">
           <i class="demo-icon icon-subway">&#xf239;</i> <span class="i-name">icon-subway</span><span class="i-code">0xf239</span>
         </div>
@@ -419,11 +486,11 @@
         <div class="span3" title="Code: 0xf277">
           <i class="demo-icon icon-map-signs">&#xf277;</i> <span class="i-name">icon-map-signs</span><span class="i-code">0xf277</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf278">
           <i class="demo-icon icon-map-o">&#xf278;</i> <span class="i-name">icon-map-o</span><span class="i-code">0xf278</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf279">
           <i class="demo-icon icon-map">&#xf279;</i> <span class="i-name">icon-map</span><span class="i-code">0xf279</span>
         </div>
@@ -433,11 +500,11 @@
         <div class="span3" title="Code: 0xf2b5">
           <i class="demo-icon icon-handshake-o">&#xf2b5;</i> <span class="i-name">icon-handshake-o</span><span class="i-code">0xf2b5</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf2b6">
           <i class="demo-icon icon-envelope-open">&#xf2b6;</i> <span class="i-name">icon-envelope-open</span><span class="i-code">0xf2b6</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf2b7">
           <i class="demo-icon icon-envelope-open-o">&#xf2b7;</i> <span class="i-name">icon-envelope-open-o</span><span class="i-code">0xf2b7</span>
         </div>
@@ -447,13 +514,27 @@
         <div class="span3" title="Code: 0xf2c7">
           <i class="demo-icon icon-thermometer">&#xf2c7;</i> <span class="i-name">icon-thermometer</span><span class="i-code">0xf2c7</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf2dc">
           <i class="demo-icon icon-snowflake-o">&#xf2dc;</i> <span class="i-name">icon-snowflake-o</span><span class="i-code">0xf2dc</span>
         </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xf305">
+          <i class="demo-icon icon-yandex">&#xf305;</i> <span class="i-name">icon-yandex</span><span class="i-code">0xf305</span>
+        </div>
+        <div class="span3" title="Code: 0xf306">
+          <i class="demo-icon icon-yandex-rect">&#xf306;</i> <span class="i-name">icon-yandex-rect</span><span class="i-code">0xf306</span>
+        </div>
         <div class="span3" title="Code: 0xf308">
           <i class="demo-icon icon-facebook-squared">&#xf308;</i> <span class="i-name">icon-facebook-squared</span><span class="i-code">0xf308</span>
+        </div>
+        <div class="span3" title="Code: 0xf310">
+          <i class="demo-icon icon-gplus-circled">&#xf310;</i> <span class="i-name">icon-gplus-circled</span><span class="i-code">0xf310</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xf32d">
+          <i class="demo-icon icon-instagram-1">&#xf32d;</i> <span class="i-name">icon-instagram-1</span><span class="i-code">0xf32d</span>
         </div>
       </div>
     </div>
