--- a/raspisanie.html
+++ b/raspisanie.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
             crossorigin="anonymous">
-        <link rel="stylesheet" href="fontello-7afcbda8/css/fontello.css">
+            <link rel="stylesheet" href="fontello-de9a3836/css/fontello.css">
         <link rel="stylesheet" href="style.css">
         <title>Kavkaz Trekking</title>
     </head>
@@ -350,6 +350,31 @@
       </div>
     </div>
   </section>
+
+   <!-- футер -->
+   <footer id="footer">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 text-center m-5">
+          <a href="" target="_blank" class="btn btn-footer"><i
+              class="icon-youtube-play"></i></a>
+          <a href="https://vk.com/gora_guide" target="_blank" class="btn btn-footer"><i
+              class="icon-vkontakte"></i></a>
+          <a href="" target="_blank" class="btn btn-footer"><i
+              class="icon-whatsapp"></i></a>
+          <a href="" target="_blank" class="btn btn-footer"><i
+              class="icon-paper-plane"></i></a>
+          <a href="" target="_blank" class="btn btn-footer"><i
+              class="icon-instagram"></i></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="text-white">&#169; Людмила Горбунова 2022</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
